--- a/Exercise 13-CSS/about.html
+++ b/Exercise 13-CSS/about.html
@@ -5,7 +5,7 @@
     <title>About</title>
 <body>
     <header>
-        <h1>Index</h1>
+        <h1>About</h1>
         <nav>
             <a href="index.html">Home</a>
             <div><a class="navlink" href="about.html">About</a></div>
