--- a/Exercise 13-CSS/index.html
+++ b/Exercise 13-CSS/index.html
@@ -6,7 +6,7 @@
     <title>Index</title>
 <body>
     <header>
-        <h1>Index</h1>
+        <h1>Home</h1>
         <nav>
             <div><a class="navlink" href="index.html">Home</a></div>
             <a href="about.html">About</a>
