--- a/Exercise 13-CSS/news.html
+++ b/Exercise 13-CSS/news.html
@@ -5,7 +5,7 @@
     <title>News</title>
 <body>
     <header>
-        <h1>Index</h1>
+        <h1>News</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
