Fixing all links

--- a/Exercise 13-CSS/about.html
+++ b/Exercise 13-CSS/about.html
@@ -2,13 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>About</title>
 <body>
     <header>
         <h1>About</h1>
         <nav>
             <a href="index.html">Home</a>
-            <div><a class="navlink" href="about.html">About</a></div>
+            <a class="navlink" href="about.html">About</a>
             <a href="news.html">News</a>
         </nav>
     </header>
