--- a/Exercise 13-CSS/index.html
+++ b/Exercise 13-CSS/index.html
@@ -8,7 +8,7 @@
     <header>
         <h1>Home</h1>
         <nav>
-            <div><a class="navlink" href="index.html">Home</a></div>
+            <a class="navlink" href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="news.html">News</a>
         </nav>
