--- a/Exercise 13-CSS/news.html
+++ b/Exercise 13-CSS/news.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>News</title>
 <body>
     <header>
@@ -9,7 +10,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <div><a class="navlink" href="news.html">News</a></div>
+            <a class="navlink" href="news.html">News</a>
         </nav>
     </header>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non volutpat arcu. Integer elit tellus, blandit a luctus eget, convallis ut libero. Proin volutpat vel velit in scelerisque. Mauris commodo lorem eu justo efficitur, et aliquam erat pellentesque. Phasellus semper lobortis orci a accumsan. Nulla vehicula, leo efficitur cursus eleifend, nibh sapien congue diam, eget interdum nulla est ac libero. Praesent nec luctus nibh, id mollis ex. Sed ullamcorper est eu enim sodales interdum. Nulla quis sodales diam, non fermentum nisl. Fusce ut nunc augue. In in imperdiet ex, ut dapibus ex. Phasellus rutrum, dui in faucibus dignissim, nulla lectus posuere leo, at ornare nibh est vitae dolor. Duis non quam semper, ullamcorper quam sed, vulputate mauris. Maecenas facilisis accumsan dignissim. Integer tincidunt ultricies elit. Sed facilisis ac neque eget laoreet.</p>
