--- a/google-page/index.html
+++ b/google-page/index.html
@@ -71,27 +71,19 @@
         border-radius: 3px;
         padding: 24px 48px;
       }
-      footer {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 10px;
-        padding-right: 10px;
-      }
       footer a {
         color: #333;
         text-decoration: none;
       }
       .footer-1 {
-          display: block;
+          display: inline-flex;
           align-items: center;
           background-color: lightgray;
+          
       }
       .footer-right {
         display: flex;
         align-items: center;
-        padding-left: 500px;
-        padding-right: 200px;
       }
  
     </style>
@@ -132,9 +124,9 @@
     </main>
 
     <footer>
-        <div class="footer-1">Canada<p><br />
-        </div>
-            <div>
+        <div class="footer-1">Canada<p><br /><br /></p></div>
+        
+        <div>
             <a href="#">Advertising</a>
             <a href="#">Business</a>
             <a href="#">How Search works</a>
@@ -145,8 +137,6 @@
             <a href="#">Terms</a>
             <a href="#">Settings</a>
         </div>
-    </p>
-        </footer>
     </footer>
 
   </body>
